# eztramtix-mail

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
pretix_custommail/: apps.py  mail.py  placeholders.py  settings.py  signals.py
pretix_custommail/templates/pretix_custommail/email/: custommail.html
