[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-custommail"
version = "0.1.0"
description = "Custom HTML email renderer for pretix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Pretix Custom Mail Contributors"}
]
dependencies = [
  "pretix>=2025.7.0",
]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.entry-points."pretix.plugin"]
pretix_custommail = "pretix_custommail.apps:CustomMailApp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pretix_custommail*"]
